--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 										<li><a href="https://steamcommunity.com/profiles/76561198954963770/" class="icon brands fa-steam-symbol alt"><span class="label">Steam</span></a></li>
 										<li><a href="https://github.com/onigiriko" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
 										<li><a href="https://www.deviantart.com/onigiriko" class="icon brands fa-deviantart alt"><span class="label">Deviantart</span></a></li>
+										<li><a href="https://www.behance.net/rishabhshah10" class="icon brands fa-behance alt"><span class="label">Behance</span></a></li>
 										<li><a href="https://www.youtube.com/channel/UC9VTGUnaeZMvOOg-S3A8ACA" class="icon brands fa-youtube alt"><span class="label">Youtube</span></a></li>
 										<li><a href="https://discord.com/users/496004260119576593/" class="icon brands fa-discord alt"><span class="label">Discord</span></a></li>
 										<li><a href="https://open.spotify.com/user/o54rgvmcss2cjo7np0i8zn27a?si=4eeaf8f11b4f4259" class="icon brands fa-spotify alt"><span class="label">Spotify</span></a></li>
