--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 										<header class="major">
 											<h2><b>Hi! I'm Onigiri.</b></h2>
 										</header>
-										<p>I'm an online personality of a hopeless university student who started watching anime in the spring of 2021.</p>
+										<p>I'm a hopeless university student who started watching anime in the spring of 2021.</p>
 										<ul class="actions">
 											<li><a href="generic.html" class="button">Learn More</a></li>
 										</ul>
